--- a/info.plist
+++ b/info.plist
@@ -917,13 +917,13 @@ append_block_children(id, {
             text: {
               content: "{query}",
             },
-            annotaions: {
+            annotations: {
               bold: false,
               italic: false,
               strikethrough: false,
               underline: false,
               code: false,
-              colod: "default",
+              color: "default",
             },
             plain_text: "{query}",
           }
@@ -1681,8 +1681,8 @@ Bug fix:
 	<key>variablesdontexport</key>
 	<array>
 		<string>TASK_ID</string>
-		<string>PROJECT_ID</string>
 		<string>MY_NOTION_TOKEN</string>
+		<string>PROJECT_ID</string>
 	</array>
 	<key>version</key>
 	<string>1.5</string>
